# sequential-gallery

./: .gitmodules  CMakeLists.txt  CODING_GUIDELINE.md  LICENSE  README.md  setup.py
.github/workflows/: macos-python.yml  macos.yml  ubuntu-python.yml  ubuntu.yml
app/: animated-zoomable-grid-layout.cpp  animated-zoomable-grid-layout.hpp  app-window.cpp  app-window.hpp  main.cpp  preview-widget.cpp  preview-widget.hpp  recorder.cpp  recorder.hpp  zoomable-grid-widget.cpp  zoomable-grid-widget.hpp
exp/: main.cpp  print_stats.py  statistics.py  visualize-together.py  visualize.py
python-bindings/: CMakeLists.txt  pysps.cpp
python-tests/: test.py
resources/: README.md
sps/include/sps/: plane.hpp  sps.hpp  strategy.hpp
sps/src/: plane.cpp  sps.cpp  strategy.cpp
test/: unit-test.cpp
